--- a/SocialAPI/Views/Home/Index.cshtml
+++ b/SocialAPI/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@using SocialAPI.Models
-@using System.Data.SqlClient;
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Главная страница";
@@ -7,6 +6,8 @@
 @{
     Users u = new Users(1, "06c2b7d534398d593ba1b7ae5efd5d3f85081b640df560b66dc828f9bc1dab3b1da73b6b49c0fa0bea9cd", "Шарипов Фидан");
     Session["user"] = u;
+    Area.Query("District");
+    
 }
 <body>
     <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
@@ -42,7 +43,9 @@
                             <option value="2">Субъекту</option>
                             <option value="3">Городу</option>
                         </select>
-                        <select name="area" id="areaId" style="visibility:hidden"></select><br />
+                        <select name="area" id="areaId" style="visibility:hidden">
+                            
+                        </select><br />
                         <input name="send" type="submit" value="Отправить" />
                     </div>
                 </div>
