--- a/SocialAPI/Views/Home/Index.cshtml
+++ b/SocialAPI/Views/Home/Index.cshtml
@@ -6,8 +6,7 @@
 @{
     Users u = new Users(1, "06c2b7d534398d593ba1b7ae5efd5d3f85081b640df560b66dc828f9bc1dab3b1da73b6b49c0fa0bea9cd", "Шарипов Фидан");
     Session["user"] = u;
-    Area.Query("District");
-    
+
 }
 <body>
     <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
@@ -17,21 +16,21 @@
             <div style="float: right; width:300px">
                 <label>Статус:</label>
                 <label id="stat">Ожидание</label>
-                <br/>
+                <br />
                 <label id="counting_lab" style="visibility:hidden">Количество результатов:</label>
                 <label id="counting" style="visibility:hidden">0</label>
             </div>
             <form method="post" action="~/Home/Search">
-                <div style="width: 500px">
+                <div style="width: 650px">
                     <div style="float:left">
                         <label>Запрос: </label><br />
                         <label>Количество результатов поиска:</label><br />
                         <label>Тип сообщества:</label><br />
                         <label>Поиск по:</label>
                     </div>
-                    <div style="float:right">
-                        <input name="q" type="text" required/><br />
-                        <input name="numb" type="number" value="100" min="1" max="1000" style="width: 60px" required/><br/>
+                    <div style="float:right; width: 400px">
+                        <input name="q" type="text" required /><br />
+                        <input name="numb" type="number" value="100" min="1" max="1000" style="width: 60px" required /><br />
                         <select name="type">
                             <option value="group">Группам</option>
                             <option value="page">Страницам</option>
@@ -43,9 +42,8 @@
                             <option value="2">Субъекту</option>
                             <option value="3">Городу</option>
                         </select>
-                        <select name="area" id="areaId" style="visibility:hidden">
-                            
-                        </select><br />
+                        <select name="area" id="areaId" style="visibility:hidden"></select><br />
+                        <input name="areaCity" id="areaCityId" type="text" style="visibility:hidden; width: 200px;" /><br />
                         <input name="send" type="submit" value="Отправить" />
                     </div>
                 </div>
@@ -69,10 +67,45 @@
 
                     function areaTypeChanged() {
                         var areaType = document.getElementById("areaTypeId"),
-                        area = document.getElementById("areaId");
+                        area = document.getElementById("areaId"),
+                        areaCity = document.getElementById("areaCityId");
+
                         if (areaType.value == 0) {
                             area.style = "visibility: hidden";
-                        } else area.style = "visibility: visible";
+                            areaCity.style = "visibility: hidden";
+                        }
+                        else if (areaType.value == 1) {
+                            area.style = "visibility: visible"
+                            areaCity.style = "visibility: hidden";
+                            $.getJSON('@Url.Action("GetArea", "Home")', { table: "District" }, function (data) {
+                                for (i = area.length - 1; i >= 0; i--) {
+                                    area.remove(i);
+                                }
+                                $.each(data, function (i, item) {
+                                    var option = document.createElement("option");
+                                    option.text = item.name;
+                                    area.add(option);
+                                });
+                            });
+                        }
+                        else if (areaType.value == 2) {
+                            area.style = "visibility: visible"
+                            areaCity.style = "visibility: hidden";
+                            $.getJSON('@Url.Action("GetArea", "Home")', { table: "Region" }, function (data) {
+                                for (i = area.length - 1; i >= 0; i--) {
+                                    area.remove(i);
+                                }
+                                $.each(data, function (i, item) {
+                                    var option = document.createElement("option");
+                                    option.text = item.name;
+                                    area.add(option);
+                                });
+                            });
+                        }
+                        else if (areaType.value == 3) {
+                            area.style = "visibility: hidden"
+                            areaCity.style = "visibility: visible";
+                        }
                     }
 
                     function setIcons() {
