--- a/SocialAPI/Views/Home/Index.cshtml
+++ b/SocialAPI/Views/Home/Index.cshtml
@@ -108,7 +108,7 @@
 
     <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
 
-    <div id="canvas" style="width: 100%; margin-top: 51px;"></div>
+    <div id="canvas" style="margin-top: 51px; float: left;"></div>
     @section scripts
     {
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -132,6 +132,7 @@
         $(document).ready(function () {
             var canvas = document.getElementById('canvas');
             canvas.style.height = document.documentElement.clientHeight - 71 + "px";
+            canvas.style.width = document.documentElement.clientWidth + "px";
         });
 
         function areaTypeChanged() {
@@ -311,7 +312,7 @@
 
                             });
 
-                            setTimeout(markerPlacing, 2500);
+                            setTimeout(markerPlacing, 3500);
                             function markerPlacing() {
                                 $.each(data, function (i, item) {
 
