--- a/SocialAPI/Views/Home/Index.cshtml
+++ b/SocialAPI/Views/Home/Index.cshtml
@@ -106,10 +106,30 @@
         </div>
     </div>
 
+    <div class="modal fade" id="modal-2">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Идет поиск</h4>
+                </div>
+                <div class="modal-body" style="padding: 20px 20px 0px 20px;">
+                    <div class="progress progress-striped active">
+                        <div class="progress-bar" style="width: 100%;">
+                            <span class="sr-only"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
 
     <div id="canvas" style="margin-top: 51px; float:left"></div>
     <div id="listOfGroups" class="lstOfGroups"></div>
+    
     @section scripts
     {
         <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -164,11 +184,13 @@
                 $.getJSON('@Url.Action("Info", "Home")', function (data) {
                     if (!data) {
                         //status.innerHTML = 'Установка маркеров на карту...';
+                        $("#modal-2").modal('show');
                     }
 
                     $.getJSON('@Url.Action("GetData", "Home")', function (data) {
 
                         if (data != '') {
+
                             nameOfSubject = data[0].subjectName;
 
                             // Определение типа гео-поиска
@@ -258,6 +280,7 @@
                                 listOfGr(item);
                             });
                         }
+                        $("#modal-2").modal('hide');
                     });
                 })                
 
