--- a/SocialAPI/Content/bootstrap.css
+++ b/SocialAPI/Content/bootstrap.css
@@ -6819,6 +6819,8 @@ td.visible-print {
     margin-top: 51px; 
     float:right; 
     overflow:auto;
+    position: absolute;
+    right: 0px;
 }
 
 .grpDescr{
@@ -6826,6 +6828,17 @@ td.visible-print {
     border-bottom: solid 1px #c8c9cb;
     padding: 2px;
     font-family: -apple-system,BlinkMacSystemFont,Roboto,Open Sans,Helvetica Neue,sans-serif;
+    margin-bottom: 5px;
+    border-top: solid 1px #c8c9cb;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+    background-color: #f8f8f8;
+    margin-left: 10px;
+    border-radius: 10px 0px 0px 10px;    
+    overflow:hidden;
+}
+
+.grpDescr>div{
+    display:normal;
 }
 
 .grpDescrNI{
@@ -6845,4 +6858,15 @@ td.visible-print {
     margin: 2px; 
     width: 278px;
     float:left
+}
+
+.listVB{
+    height:20px; 
+    width:20px; 
+    position:fixed; 
+    right: 305px; 
+    top: 50px;
+    background-color:#f8f8f8;
+    border:0px;
+    border-radius: 0px 0px 3px 3px
 }
